--- a/Lesson6/mainTask/sass/_variables.sass
+++ b/Lesson6/mainTask/sass/_variables.sass
@@ -1,34 +1,35 @@
 $text-color: #262626
 $active: #ff6a30
 $result: #61a654
+$text-color-lighten: #f3dbdb
 
 @mixin header 
-    margin: 13px 0px
+    margin: 20px 0px
     font-weight: 500
     font-size: 14px
     color: $text-color
     text-align: center
 @mixin input
     height: 35px
-    width: calc((100%/2) - 4px)
-    border-radius: 2.5px
+    width: calc((100%/2) - 12px)
+    border-radius: 20px
     background-color: #ffffff
     box-shadow: 0px 2.5px 10px 0 rgba(1, 0, 42, 0.1)
     border: none
     padding-left: 10px
-    margin-bottom: 10px
+    margin: 10px 5px
     font-size: 14px
-    color: #a7a7a7
+    color: #222
 @mixin btn
-    width: 70px
-    height: 30px
+    width: 130px
+    height: 40px
     display: block
-    margin: 0 auto
+    margin: 10px auto
     border: none
-    border-radius: 2.5px
+    border-radius: 20px
     background-image: linear-gradient(336deg, #ffbd75, #ff964b), linear-gradient(#ffffff, #ffffff)
     box-shadow: 0px 2.5px 10px 0 rgba(1, 0, 42, 0.1)
     color: #fff
-    font-weight: 100
-    font-size: 12px
+    font-weight: 600
+    font-size: 16px
     cursor: pointer
