--- a/Lesson6/mainTask/sass/_variables.sass
+++ b/Lesson6/mainTask/sass/_variables.sass
@@ -20,6 +20,9 @@ $text-color-lighten: #f3dbdb
     margin: 10px 5px
     font-size: 14px
     color: #222
+    transition: all 0.3s ease
+    &:focus
+        box-shadow: 0px -0.5px 5px 0 rgba(255, 255, 255, 1)
 @mixin btn
     width: 130px
     height: 40px
